update post login responsive v1

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -50,9 +50,9 @@
 									</div>
 
 									<div class="row">
-										<div class="col-md-12">
-											<p class="mb-3">ลืมรหัสผ่าน
-												<a style="cursor: pointer;" (click)="checkpage('forgotpassword')">
+										<div class="col-md-12" >
+											<p class="mb-3" (click)="checkpage('forgotpassword')" style="cursor: pointer;">ลืมรหัสผ่าน
+												<a  style="cursor: pointer;">
 													<i class="fa fa-question-circle" aria-hidden="true"></i>
 												</a>
 											</p>
@@ -385,12 +385,12 @@
 													<h3>เงื่อนไข,ผลตอบแทน</h3>
 													<h3>และความเสี่ยงก่อนตัดสินใจ</h3>
 												</div>
-												<div class="col-md-12 text-center mt-3">
+												<div class="col-md-12 mt-3">
 													<div class="btn-wrapper">
 														<div class="row justify-content-center">
-															<div class="col-md-8">
-																<button class="btn-med btn-light" (click)="checkpage('signin')">
-																<div class="login-icon ml-2 mt-1">
+															<div class="col-md-8 col-xs-6">
+																<button class="btn-med btn-light text-center" (click)="checkpage('signin')">
+																<div class="login-icon ml-md-2 ml-0 mt-1">
 																		<img src="/assets/Images/icons/icon-login-white.png" class="visible-lg-block" />
 																		  <img src="/assets/Images/icons/icon-login-white.png" class="visible-md-block visible-sm-block visible-xs-block" />
 																</div>
