--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-md-8 hidden-sm hidden-xs top-main-nav">
                 </div>
-                <div class="col-md-4 top-social-nav">
+                <div class="col-md-4 top-social-nav hidden-sm hidden-xs">
                     <ul class="">
                         <li class="ico-fb">
                             <a href="#" title="">
@@ -80,3 +80,23 @@
   </div>
 </div>
 <!-- header -->
+<!-- <nav class="navbar navbar-light bg-lignt">
+        <a href="/" class="navbar-brand">Light</a>
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
+            <span class="navbar-toggler-icon my-toggler"></span>
+        </button>
+        <div class="navbar-collapse collapse" id="collapsingNavbar2">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+            </ul>
+        </div>
+    </nav>   -->
+    
