--- a/src/app/regular-list/regular-list.component.html
+++ b/src/app/regular-list/regular-list.component.html
@@ -6,6 +6,18 @@
         <div class="row">
           <div class="col-md-12">
             <div class="tabs-menu-wrapper">
+                <div class="dropdown dropdown-content">
+                    <button class="btn-med btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        เมนูกองทุน 
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a (click)="checkpage('regular-purchase')" title="รายการซื้อแบบประจำ">รายการซื้อแบบประจำ</a></li>
+                        <li><a (click)="checkpage('regular-sell')" title="รายการขายคืนแบบประจำ">รายการขายคืนแบบประจำ</a></li>
+                        <li><a (click)="checkpage('regular-exchange')" title="รายการสับเปลี่ยนแบบประจำ">รายการสับเปลี่ยนแบบประจำ</a></li>
+                        <li><a  title="ดูรายการทั้งหมด">ดูรายการทั้งหมด</a></li>                                             
+                    </ul>
+                    <div class="clearfix"></div>
+                </div>
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
                 <li role="presentation" id="menu1" class="current">
                   <a title="รายการซื้อ" (click)="checkpage('regular-purchase')">รายการซื้อแบบประจำ</a>
@@ -28,7 +40,7 @@
               <div class="heading-section">
                 <div class="row">
                   <div class="detail-head-wrapper">
-                    <div class="col-md-12 icon-option mb-3">
+                    <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                       <ul class="">
                         <li class="ico-fb">
@@ -103,12 +115,12 @@
                       <div class="col-md-4">
                         <span>จำนวน(บาท)</span>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3 col-xs-6">
                         <div class="input-wrapper ">
                           <input id="name" name="name" maxlength="30" type="text" class="bg-gray" placeholder="0">
                         </div>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3 col-xs-6">
                         <div class="select-wrapper inline-block">
 
                           <select name="ddlLink" id="ddlLink">
@@ -126,14 +138,14 @@
                       <div class="col-md-4">
                         <span>เงื่อนไข</span>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3  col-xs-6">
                         <div class="custom-radio-between">
                           <input value="101" id="101" name="rad1" type="radio" checked>
                           <label for="101"></label>
                           <p>รายเดือน</p>
                         </div>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3 col-xs-6">
                         <div class="select-wrapper inline-block">
 
                           <select name="ddlLink" id="ddlLink">
@@ -166,13 +178,13 @@
                     </div>
 
                     <div class="row">
-                      <div class="col-md-3 offset-md-4">
+                      <div class="col-md-3  col-xs-6 offset-md-4">
                         <button class="btn-med btn-primary" (click)="checkpage('signup1')">
                           ตกลง
                           <i class="fa fa-angle-right" aria-hidden="true"></i>
                         </button>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3 col-xs-6">
                         <button class="btn-med btn-cancel" (click)="checkpage('signup1')">
                           ยกเลิก
                           <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -184,17 +196,18 @@
               </div>
               <div class="detail-footer-wrapper">
                 <div class="row">
-                  <div class="col-md-6 text-left">
-                    <h4>รายการซื้อหน่วยลงทุน</h4> (รายการที่รอดำเนินการ)
-
-                  </div>
-                  <div class="col-md-6 text-right">
-
-                    <i class="fa fa-angle-right" aria-hidden="true"></i>ดูรายการทั้งหมด
-                  </div>
-                  <div class="col-md-12 mt-5 text-center">
-                    ไม่มีรายการที่รอดำเนินงาน
-                  </div>
+                    <div class="col-md-2 text-left">                    
+                        <h4>รายการซื้อหน่วยลงทุน</h4>
+                      </div>
+                      <div class="col-md-4 mb-3 text-left no-padding">                    
+                        (รายการที่รอดำเนินการ)
+                      </div>
+                      <div class="col-md-6 text-md-right">
+                        <i class="fa fa-angle-right" aria-hidden="true"></i>ดูรายการทั้งหมด
+                      </div>
+                      <div class="col-md-12 mt-5 text-center">
+                          ไม่มีรายการที่รอดำเนินงาน
+                      </div>
                 </div>
               </div>
             </div>
@@ -207,6 +220,18 @@
         <div class="row">
           <div class="col-md-12">
             <div class="tabs-menu-wrapper">
+                <div class="dropdown dropdown-content">
+                    <button class="btn-med btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                        เมนูกองทุน 
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a (click)="checkpage('regular-purchase')" title="รายการซื้อแบบประจำ">รายการซื้อแบบประจำ</a></li>
+                        <li><a (click)="checkpage('regular-sell')" title="รายการขายคืนแบบประจำ">รายการขายคืนแบบประจำ</a></li>
+                        <li><a (click)="checkpage('regular-exchange')" title="รายการสับเปลี่ยนแบบประจำ">รายการสับเปลี่ยนแบบประจำ</a></li>
+                        <li><a  title="ดูรายการทั้งหมด">ดูรายการทั้งหมด</a></li>                                             
+                    </ul>
+                    <div class="clearfix"></div>
+                </div>
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
                   <li role="presentation" id="menu1">
                       <a title="รายการซื้อ" (click)="checkpage('regular-purchase')">รายการซื้อแบบประจำ</a>
@@ -228,7 +253,7 @@
               <div class="heading-section">
                 <div class="row">
                   <div class="detail-head-wrapper">
-                    <div class="col-md-12 icon-option mb-3">
+                    <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                       <ul class="">
                         <li class="ico-fb">
@@ -346,12 +371,12 @@
                       <div class="col-md-4">
                         <span>จำนวนที่ขายคืน</span>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3 col-xs-6">
                         <div class="input-wrapper ">
                           <input id="name" name="name" maxlength="30" type="text" class="bg-gray" placeholder="0">
                         </div>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3 col-xs-6">
                         <div class="select-wrapper inline-block">
 
                           <select name="ddlLink" id="ddlLink">
@@ -381,14 +406,14 @@
                         <div class="col-md-4">
                           <span>เงื่อนไข</span>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-xs-6">
                           <div class="custom-radio-between">
                             <input value="101" id="101" name="rad1" type="radio" checked>
                             <label for="101"></label>
                             <p>รายเดือน</p>
                           </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-xs-6">
                           <div class="select-wrapper inline-block">
   
                             <select name="ddlLink" id="ddlLink">
@@ -420,13 +445,13 @@
                         </div>
                       </div>
                     <div class="row">
-                      <div class="col-md-3 offset-md-4">
+                      <div class="col-md-3  col-xs-6 offset-md-4">
                         <button class="btn-med btn-primary" (click)="checkpage('signup1')">
                           ตกลง
                           <i class="fa fa-angle-right" aria-hidden="true"></i>
                         </button>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-3 col-xs-6">
                         <button class="btn-med btn-cancel" (click)="checkpage('signup1')">
                           ยกเลิก
                           <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -443,17 +468,18 @@
               </div>
               <div class="detail-footer-wrapper">
                 <div class="row">
-                  <div class="col-md-6 text-left">
-                    <h4>รายการซื้อหน่วยลงทุน</h4> (รายการที่รอดำเนินการ)
-
-                  </div>
-                  <div class="col-md-6 text-right">
-
-                    <i class="fa fa-angle-right" aria-hidden="true"></i>ดูรายการทั้งหมด
-                  </div>
-                  <div class="col-md-12 mt-5 text-center">
-                    ไม่มีรายการที่รอดำเนินงาน
-                  </div>
+                    <div class="col-md-2 text-left">                    
+                        <h4>รายการซื้อหน่วยลงทุน</h4>
+                      </div>
+                      <div class="col-md-4 mb-3 text-left no-padding">                    
+                        (รายการที่รอดำเนินการ)
+                      </div>
+                      <div class="col-md-6 text-md-right">
+                        <i class="fa fa-angle-right" aria-hidden="true"></i>ดูรายการทั้งหมด
+                      </div>
+                      <div class="col-md-12 mt-5 text-center">
+                          ไม่มีรายการที่รอดำเนินงาน
+                      </div>
                 </div>
               </div>
             </div>
@@ -468,6 +494,18 @@
           <div class="row">
             <div class="col-md-12">
               <div class="tabs-menu-wrapper">
+                  <div class="dropdown dropdown-content">
+                      <button class="btn-med btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                          เมนูกองทุน 
+                      </button>
+                      <ul class="dropdown-menu">
+                          <li><a (click)="checkpage('regular-purchase')" title="รายการซื้อแบบประจำ">รายการซื้อแบบประจำ</a></li>
+                          <li><a (click)="checkpage('regular-sell')" title="รายการขายคืนแบบประจำ">รายการขายคืนแบบประจำ</a></li>
+                          <li><a (click)="checkpage('regular-exchange')" title="รายการสับเปลี่ยนแบบประจำ">รายการสับเปลี่ยนแบบประจำ</a></li>
+                          <li><a  title="ดูรายการทั้งหมด">ดูรายการทั้งหมด</a></li>                                             
+                      </ul>
+                      <div class="clearfix"></div>
+                  </div>
                 <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
                     <li role="presentation" id="menu1">
                         <a title="รายการซื้อ" (click)="checkpage('regular-purchase')">รายการซื้อแบบประจำ</a>
@@ -489,7 +527,7 @@
                 <div class="heading-section">
                   <div class="row">
                     <div class="detail-head-wrapper">
-                      <div class="col-md-12 icon-option mb-3">
+                      <div class="col-md-12 col-xs-12 icon-option mb-3">
   
                         <ul class="">
                           <li class="ico-fb">
@@ -607,12 +645,12 @@
                         <div class="col-md-4">
                           <span>สับเปลี่ยนจำนวน</span>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-xs-6">
                           <div class="input-wrapper ">
                             <input id="name" name="name" maxlength="30" type="text" class="bg-gray" placeholder="0">
                           </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-xs-6">
                           <div class="select-wrapper inline-block">
   
                             <select name="ddlLink" id="ddlLink">
@@ -642,14 +680,14 @@
                           <div class="col-md-4">
                             <span>เงื่อนไข</span>
                           </div>
-                          <div class="col-md-3">
+                          <div class="col-md-3 col-xs-6">
                             <div class="custom-radio-between">
                               <input value="101" id="101" name="rad1" type="radio" checked>
                               <label for="101"></label>
                               <p>รายเดือน</p>
                             </div>
                           </div>
-                          <div class="col-md-3">
+                          <div class="col-md-3 col-xs-6">
                             <div class="select-wrapper inline-block">
     
                               <select name="ddlLink" id="ddlLink">
@@ -681,13 +719,13 @@
                           </div>
                         </div>
                       <div class="row">
-                        <div class="col-md-3 offset-md-4">
+                        <div class="col-md-3  col-xs-6 offset-md-4">
                           <button class="btn-med btn-primary" (click)="checkpage('signup1')">
                             ตกลง
                             <i class="fa fa-angle-right" aria-hidden="true"></i>
                           </button>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-xs-6">
                           <button class="btn-med btn-cancel" (click)="checkpage('signup1')">
                             ยกเลิก
                             <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -704,17 +742,18 @@
                 </div>
                 <div class="detail-footer-wrapper">
                   <div class="row">
-                    <div class="col-md-6 text-left">
-                      <h4>รายการซื้อหน่วยลงทุน</h4> (รายการที่รอดำเนินการ)
-  
-                    </div>
-                    <div class="col-md-6 text-right">
-  
-                      <i class="fa fa-angle-right" aria-hidden="true"></i>ดูรายการทั้งหมด
-                    </div>
-                    <div class="col-md-12 mt-5 text-center">
-                      ไม่มีรายการที่รอดำเนินงาน
-                    </div>
+                      <div class="col-md-2 text-left">                    
+                          <h4>รายการซื้อหน่วยลงทุน</h4>
+                        </div>
+                        <div class="col-md-4 mb-3 text-left no-padding">                    
+                          (รายการที่รอดำเนินการ)
+                        </div>
+                        <div class="col-md-6 text-md-right">
+                          <i class="fa fa-angle-right" aria-hidden="true"></i>ดูรายการทั้งหมด
+                        </div>
+                        <div class="col-md-12 mt-5 text-center">
+                            ไม่มีรายการที่รอดำเนินงาน
+                        </div>
                   </div>
                 </div>
               </div>
