--- a/src/app/rmf-ltf/rmf-ltf.component.html
+++ b/src/app/rmf-ltf/rmf-ltf.component.html
@@ -6,6 +6,26 @@
         <div class="row">
           <div class="col-md-12">
             <div class="tabs-menu-wrapper">
+              <div class="dropdown dropdown-content">
+                <button class="btn-med btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                  เมนูกองทุน
+                </button>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a (click)="checkpage('ltf-condition-complete')" title="หน่วยลงทุน LTF ที่ครบตามเงื่อนไข">หน่วยลงทุน LTF ที่ครบตามเงื่อนไข</a>
+                  </li>
+                  <li>
+                    <a (click)="checkpage('conclusion')" title="สรุปยอดซื้อ RMF & LTF ในรอบปี">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
+                  </li>
+                  <li>
+                    <a (click)="checkpage('certificate')" title="หนังสือรับรองฯ RMF">หนังสือรับรองฯ RMF</a>
+                  </li>
+                  <li>
+                    <a (click)="checkpage('')" title="หนังสือรับรองฯ LTF">หนังสือรับรองฯ LTF</a>
+                  </li>
+                </ul>
+                <div class="clearfix"></div>
+              </div>
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
                 <li role="presentation" id="menu1">
                   <a title="รายการซื้อ" (click)="checkpage('ltf-condition-complete')">หน่วยลงทุน LTF ที่ครบตามเงื่อนไข</a>
@@ -27,7 +47,7 @@
               <div class="heading-section">
                 <div class="row">
                   <div class="detail-head-wrapper">
-                    <div class="col-md-12 icon-option mb-3">
+                    <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                       <ul class="">
                         <li class="ico-fb">
@@ -108,10 +128,10 @@
                         <div class="col-md-3 col-xs-12 no-padding">
                           <div class="title-heading">
                             <div class="row">
-                              <div class="col-md-3">
+                              <div class="col-md-3 col-xs-3">
                                 <img src="/assets/Images/icons/ico-rmf.png">
                               </div>
-                              <div class="col-md-9">
+                              <div class="col-md-9 col-xs-9">
                                 <div class="row">
                                   <div class="col-sm-12">
                                     <p>มูลค่าการลงทุน RMF (บาท)</p>
@@ -126,12 +146,12 @@
                           </div>
                         </div>
                         <div class="col-md-3 col-xs-12 no-padding">
-                          <div class="title-heading-sea">
+                          <div class="title-heading bg-sea">
                             <div class="row">
-                              <div class="col-md-3">
+                              <div class="col-md-3 col-xs-3">
                                 <img src="/assets/Images/icons/ico-ltf.png">
                               </div>
-                              <div class="col-md-9">
+                              <div class="col-md-9 col-xs-9">
                                 <div class="row">
                                   <div class="col-sm-12">
                                     <p>มูลค่าการลงทุน LTF (บาท)</p>
@@ -314,7 +334,7 @@
 
                   <div class="col-md-12  mt-5 ">
                     <div class="row justify-content-center">
-                      <div class="col-md-3 ">
+                      <div class="col-md-2 col-xs-6 col-sm-4">
                         <button class="btn-med btn-primary" (click)="checkpage('signup1')">
                           พิมพ์
                           <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -337,6 +357,26 @@
         <div class="row">
           <div class="col-md-12">
             <div class="tabs-menu-wrapper">
+                <div class="dropdown dropdown-content">
+                    <button class="btn-med btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                      เมนูกองทุน
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <a (click)="checkpage('ltf-condition-complete')" title="หน่วยลงทุน LTF ที่ครบตามเงื่อนไข">หน่วยลงทุน LTF ที่ครบตามเงื่อนไข</a>
+                      </li>
+                      <li>
+                        <a (click)="checkpage('conclusion')" title="สรุปยอดซื้อ RMF & LTF ในรอบปี">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
+                      </li>
+                      <li>
+                        <a (click)="checkpage('certificate')" title="หนังสือรับรองฯ RMF">หนังสือรับรองฯ RMF</a>
+                      </li>
+                      <li>
+                        <a (click)="checkpage('')" title="หนังสือรับรองฯ LTF">หนังสือรับรองฯ LTF</a>
+                      </li>
+                    </ul>
+                    <div class="clearfix"></div>
+                  </div>
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
                 <li role="presentation" id="menu1">
                   <a title="รายการซื้อ" (click)="checkpage('ltf-condition-complete')">หน่วยลงทุน LTF ที่ครบตามเงื่อนไข</a>
@@ -358,7 +398,7 @@
               <div class="heading-section">
                 <div class="row">
                   <div class="detail-head-wrapper">
-                    <div class="col-md-12 icon-option mb-3">
+                    <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                       <ul class="">
                         <li class="ico-fb">
@@ -418,6 +458,28 @@
                           <label for="101"></label>
                           <p>หนังสือรับรองฯ RMF</p>
                         </div>
+                        <div class="row">
+                          <div class="col-md-12">
+                            <p>ปี</p>
+                          </div>
+                          <div class="col-md-12">
+                            <div class="select-wrapper inline-block">
+                              <select name="ddlLink" id="ddlLink">
+                                <option value="0" selected="">2561</option>
+                                <option value="36">2560</option>
+                                <option value="29">2559</option>
+                              </select>
+                            </div>
+                          </div>
+                          <div class="col-md-6 offset-6 mb-md-0 mb-3">
+                            <button class="btn-med btn-primary" (click)="checkpage('signup1')">
+                              ตกลง
+                              <i class="fa fa-angle-right" aria-hidden="true"></i>
+
+                            </button>
+                          </div>
+                        </div>
+
                       </div>
                       <div class="col-md-6">
                         <div class="custom-radio-between">
@@ -427,7 +489,7 @@
                         </div>
                       </div>
 
-                      <div class="col-md-6">
+                      <!-- <div class="col-md-6">
                         <div class="row">
                           <div class="col-md-12">
                             <p>ปี</p>
@@ -450,7 +512,7 @@
                           </div>
                         </div>
 
-                      </div>
+                      </div> -->
 
 
                     </div>
@@ -468,14 +530,14 @@
                     <ul>
                       <li>
                         <div class="row">
-                          <div class="col-md-10">
+                          <div class="col-md-10 col-xs-9">
                             <a href="#" title="ชื่อเมนู">
                               (ชื่อ) หนังสือรับรองฯ RMF
                             </a>
                           </div>
-                          <div class="col-md-2">
+                          <div class="col-md-2 col-xs-3">
                             <button class="btn-sm btn-download width50 " (click)="checkpage('signup1')">
-                              Download
+                              <p>Download</p>
                               <img src="/assets/Images/icons/ico-download-white.png">
                             </button>
                           </div>
@@ -483,14 +545,14 @@
                       </li>
                       <li>
                         <div class="row">
-                          <div class="col-md-10">
+                          <div class="col-md-10 col-xs-9">
                             <a href="#" title="ชื่อเมนู">
                               (ชื่อ) หนังสือรับรองฯ RMF
                             </a>
                           </div>
-                          <div class="col-md-2">
+                          <div class="col-md-2 col-xs-3">
                             <button class="btn-sm btn-download width50 " (click)="checkpage('signup1')">
-                              Download
+                              <p>Download</p>
                               <img src="/assets/Images/icons/ico-download-white.png">
                             </button>
                           </div>
@@ -498,14 +560,14 @@
                       </li>
                       <li>
                         <div class="row">
-                          <div class="col-md-10">
+                          <div class="col-md-10 col-xs-9">
                             <a href="#" title="ชื่อเมนู">
                               (ชื่อ) หนังสือรับรองฯ RMF
                             </a>
                           </div>
-                          <div class="col-md-2">
+                          <div class="col-md-2 col-xs-3">
                             <button class="btn-sm btn-download width50 " (click)="checkpage('signup1')">
-                              Download
+                              <p>Download</p>
                               <img src="/assets/Images/icons/ico-download-white.png">
                             </button>
                           </div>
@@ -572,19 +634,39 @@
         <div class="row">
           <div class="col-md-12">
             <div class="tabs-menu-wrapper">
+                <div class="dropdown dropdown-content">
+                    <button class="btn-med btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                      เมนูกองทุน
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <a (click)="checkpage('ltf-condition-complete')" title="หน่วยลงทุน LTF ที่ครบตามเงื่อนไข">หน่วยลงทุน LTF ที่ครบตามเงื่อนไข</a>
+                      </li>
+                      <li>
+                        <a (click)="checkpage('conclusion')" title="สรุปยอดซื้อ RMF & LTF ในรอบปี">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
+                      </li>
+                      <li>
+                        <a (click)="checkpage('certificate')" title="หนังสือรับรองฯ RMF">หนังสือรับรองฯ RMF</a>
+                      </li>
+                      <li>
+                        <a (click)="checkpage('')" title="หนังสือรับรองฯ LTF">หนังสือรับรองฯ LTF</a>
+                      </li>
+                    </ul>
+                    <div class="clearfix"></div>
+                  </div>
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
-                  <li role="presentation" id="menu1" class="current">
-                      <a title="รายการซื้อ" (click)="checkpage('ltf-condition-complete')">หน่วยลงทุน LTF ที่ครบตามเงื่อนไข</a>
-                    </li>
-                    <li role="presentation" id="menu2" >
-                      <a title="รายการขาย" (click)="checkpage('conclusion')">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
-                    </li>
-                    <li role="presentation" id="menu3">
-                      <a title="รายการสับเปลี่ยน" (click)="checkpage('certificate')">หนังสือรับรองฯ RMF</a>
-                    </li>
-                    <li role="presentation" id="menu4">
-                      <a title="รายการตั้งซื้อขายล่วงหน้า">หนังสือรับรองฯ LTF</a>
-                    </li>
+                <li role="presentation" id="menu1" class="current">
+                  <a title="รายการซื้อ" (click)="checkpage('ltf-condition-complete')">หน่วยลงทุน LTF ที่ครบตามเงื่อนไข</a>
+                </li>
+                <li role="presentation" id="menu2">
+                  <a title="รายการขาย" (click)="checkpage('conclusion')">สรุปยอดซื้อ RMF & LTF ในรอบปี</a>
+                </li>
+                <li role="presentation" id="menu3">
+                  <a title="รายการสับเปลี่ยน" (click)="checkpage('certificate')">หนังสือรับรองฯ RMF</a>
+                </li>
+                <li role="presentation" id="menu4">
+                  <a title="รายการตั้งซื้อขายล่วงหน้า">หนังสือรับรองฯ LTF</a>
+                </li>
 
               </ul>
             </div>
@@ -593,7 +675,7 @@
               <div class="heading-section">
                 <div class="row">
                   <div class="detail-head-wrapper">
-                    <div class="col-md-12 icon-option mb-3">
+                    <div class="col-md-12 col-xs-12 icon-option mb-3">
 
                       <ul class="">
                         <li class="ico-fb">
@@ -630,8 +712,8 @@
                       <span>เนติวัฒน์ โชติกร</span>
                     </div>
                     <div class="col-sm-6 col-md-6">
-                        <p>ที่อยู่</p>
-                        <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
+                      <p>ที่อยู่</p>
+                      <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
                     </div>
                   </div>
                 </div>
@@ -687,25 +769,25 @@
                         </td>
                       </tr>
                       <tr>
-                          <td class="text-left">
-                            NET
-                          </td>
-                          <td class="">
-                            07/06/2561
-                          </td>
-                          <td class="">
-                            30
-                          </td>
-                          <td class="">
-                            07/06/2561
-                          </td>
-                          <td class="txt-right">
-                            11.1500
-                          </td>
-                          <td class="txt-right">
-                            17,055.4525
-                          </td>
-                        </tr>
+                        <td class="text-left">
+                          NET
+                        </td>
+                        <td class="">
+                          07/06/2561
+                        </td>
+                        <td class="">
+                          30
+                        </td>
+                        <td class="">
+                          07/06/2561
+                        </td>
+                        <td class="txt-right">
+                          11.1500
+                        </td>
+                        <td class="txt-right">
+                          17,055.4525
+                        </td>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
