--- a/src/assets/Content/default/css/content/myport.css
+++ b/src/assets/Content/default/css/content/myport.css
@@ -29,7 +29,6 @@
 
 /* note : for IE8,7 need css3pie helper*/
 .score-wrapper {
-  overflow: hidden;
   position: relative; }
   .score-wrapper .score-result {
     padding: 0 20px;
@@ -491,6 +490,8 @@
       .open-account-wrapper .open-account-box .wrap-container .wrap-suitability .control-label {
         margin: 0;
         display: unset; }
+      .open-account-wrapper .open-account-box .wrap-container .wrap-suitability span {
+        display: inline-block; }
       .open-account-wrapper .open-account-box .wrap-container .wrap-suitability .choice-wrap {
         padding-bottom: 15px;
         margin-bottom: 15px;
@@ -668,12 +669,17 @@
   margin: 0 auto; }
   .mutual-fund-wrapper h4 {
     color: #1CA59B !important;
-    display: unset; }
+    display: inline-block;
+    margin-bottom: 20px; }
   .mutual-fund-wrapper h2 {
     color: #1CA59B !important;
     display: block; }
   .mutual-fund-wrapper span {
-    color: #1CA59B; }
+    color: #1CA59B;
+    display: block; }
+    @media screen and (max-width: 767px) {
+      .mutual-fund-wrapper span {
+        margin-bottom: 20px; } }
   .mutual-fund-wrapper .form-profile-wrapper {
     width: 100%; }
     .mutual-fund-wrapper .form-profile-wrapper input[type="text"], .mutual-fund-wrapper .form-profile-wrapper ::-webkit-input-placeholder {
@@ -700,9 +706,17 @@
     position: relative;
     max-width: 100%;
     padding: 10px;
+    padding-bottom: 40px;
     margin: 0 auto;
     border-bottom: 5px solid #f5f5f5;
     width: 100%; }
+    .mutual-fund-wrapper .detail-head-wrapper select {
+      margin: 0px; }
+    @media screen and (max-width: 767px) {
+      .mutual-fund-wrapper .detail-head-wrapper p {
+        margin-top: 20px; } }
+    .mutual-fund-wrapper .detail-head-wrapper .table-responsive {
+      margin-top: 30px; }
   .mutual-fund-wrapper .detail-body-wrapper {
     position: relative;
     max-width: 100%;
@@ -711,8 +725,7 @@
     border-bottom: 5px solid #f5f5f5;
     width: 100%; }
     .mutual-fund-wrapper .detail-body-wrapper h4 {
-      display: block;
-      margin-bottom: 20px; }
+      display: block; }
   .mutual-fund-wrapper .detail-footer-wrapper {
     position: relative;
     max-width: 100%;
@@ -720,6 +733,12 @@
     margin: 0 auto;
     border-bottom: 5px solid #f5f5f5;
     width: 100%; }
+    .mutual-fund-wrapper .detail-footer-wrapper h4 {
+      line-height: 0px;
+      margin-bottom: 30px; }
+      @media screen and (max-width: 767px) {
+        .mutual-fund-wrapper .detail-footer-wrapper h4 {
+          margin-bottom: 0px; } }
   .mutual-fund-wrapper .bg-gray {
     background-color: #f5f5f5;
     color: #1CA59B; }
