--- a/src/assets/Content/default/sass/content/myport.scss
+++ b/src/assets/Content/default/sass/content/myport.scss
@@ -12,7 +12,7 @@
 //     display: block !important;
 
 .score-wrapper{
-    overflow: hidden;
+    // overflow: hidden;
     position: relative;
 
     .score-result{
@@ -662,6 +662,9 @@ h4{
     //     margin:  10px 0;
     //     padding:  20px;
     //   }
+        span{
+            display: inline-block;
+        }
       
       .choice-wrap{
         padding-bottom: 15px;
@@ -905,7 +908,9 @@ background-color: $color-secondary;
     // }
     h4{
         color: $color-primary !important;
-        display: unset;
+        display: inline-block;
+        margin-bottom: 20px;
+        
     }
     h2{
         color: $color-primary !important;
@@ -913,6 +918,16 @@ background-color: $color-secondary;
     }
     span{
         color: $color-primary;
+        display: block;
+        @media screen and (max-width: 767px) {
+            margin-bottom: 20px;
+          }
+
+    }
+    p{
+        @media screen and (max-width: 767px) {
+            // margin-top: 20px;
+          }
     }
     
     .form-profile-wrapper{
@@ -934,9 +949,21 @@ background-color: $color-secondary;
         position: relative;
         max-width: 100%;
         padding: 10px;
+        padding-bottom: 40px;
         margin: 0 auto;
         border-bottom: 5px solid #f5f5f5;
         width: 100%;
+        select{
+            margin: 0px;
+        }
+        p{
+            @media screen and (max-width: 767px) {
+                margin-top: 20px;
+              }
+        }
+        .table-responsive{
+            margin-top: 30px;
+        }
     }
     .detail-body-wrapper{
         position: relative;
@@ -948,7 +975,7 @@ background-color: $color-secondary;
 
         h4{
             display: block;
-            margin-bottom: 20px;
+            // margin-bottom: 20px;
         }
     }
     .detail-footer-wrapper{
@@ -958,6 +985,13 @@ background-color: $color-secondary;
         margin: 0 auto;
         border-bottom: 5px solid #f5f5f5;
         width: 100%;
+        h4{
+            line-height: 0px;
+            margin-bottom: 30px;
+            @media screen and (max-width: 767px) {
+                margin-bottom: 0px;
+            }
+        }
     }
     .bg-gray{
         background-color: #f5f5f5;
